--- a/georentate_app/app/build.gradle
+++ b/georentate_app/app/build.gradle
@@ -98,4 +98,6 @@ dependencies {
     //facebook
     implementation 'com.facebook.android:facebook-android-sdk:4.36.0'
 
+    implementation "com.android.support:cardview-v7:$supportVersion"
+
 }
